tests/testdata/run/error_008_checkjs.js.out
[WILDCARD]error: Uncaught (in promise) ReferenceError: consol is not defined
consol.log("hello world!");
^
    at [WILDCARD]/error_008_checkjs.js:2:1
